tests/bad_programs/type_errors/funcall_wrong_number_of_args1.nc
void fun(int a, int b, int c, int d) {
}

int main() {
    fun(1, 2, 3, 4, 5);
    return 0;
}
